fixed header wrap bug

--- a/src/scss/components/_page-header.scss
+++ b/src/scss/components/_page-header.scss
@@ -19,11 +19,19 @@
   &-row{
     display: flex;
     justify-content: space-between;
+    @include media('<tablet') {
+      
+      flex-wrap: wrap;
+      justify-content: flex-start;
+    }
   }
   .breadcrumb{
     margin-bottom: 0;
     padding:2px 0 0 0; 
     font-size: 12px;
+    @include media('<tablet') {
+      width: 100%;
+    }
     li:before{
       text-align: center;
       font-family: monospace;
